Исправить обработку блоков в анализаторе
- Добавлена модель AnalyzerState для отслеживания последнего обработанного блока
- Реализована обработка диапазона блоков вместо только последнего
- Исправлена логика первого запуска анализатора
- Добавлен тестовый скрипт с 13 транзакциями для проверки
- Обновлен .gitignore для исключения лог-файлов и собранных бинарников

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@ ignition/deployments/chain-31337
 
 # Log-files
 *.log
+
+# Blockchain specific
+blockchain/node_modules/
+blockchain/cache/
+blockchain/artifacts/
